[gd_scene load_steps=19 format=2]

[ext_resource path="res://src/weapons/bullets/bullet.gd" type="Script" id=1]
[ext_resource path="res://raw_assets/particle_textures/smoke_1.png" type="Texture" id=2]
[ext_resource path="res://raw_assets/sfx/misc/impact_wood.wav" type="AudioStream" id=3]
[ext_resource path="res://raw_assets/sfx/misc/impact_metal_container.wav" type="AudioStream" id=4]
[ext_resource path="res://raw_assets/sfx/misc/impact_concrete.wav" type="AudioStream" id=5]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 0.09, 0.09 )

[sub_resource type="SpatialMaterial" id=2]
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_color = Color( 1, 0.4, 0, 1 )

[sub_resource type="SphereShape" id=3]
margin = 0.001
radius = 0.06

[sub_resource type="SpatialMaterial" id=4]
flags_transparent = true
vertex_color_use_as_albedo = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 2 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.333333, 1 )
colors = PoolColorArray( 0.223529, 0.223529, 0.223529, 1, 0.357422, 0.357422, 0.357422, 0.301961 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 0.204545 ), 0.0, 0.0, 0, 0, Vector2( 0.40493, 0.904545 ), 0.0, 0.0, 0, 0, Vector2( 0.68662, 0.804546 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.513636 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 0.3
angular_velocity = 45.0
angle = 45.0
angle_random = 1.0
scale_curve = SubResource( 8 )
color_ramp = SubResource( 6 )

[sub_resource type="QuadMesh" id=10]

[sub_resource type="AudioStreamRandomPitch" id=11]
audio_stream = ExtResource( 3 )

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 4 )

[sub_resource type="AudioStreamRandomPitch" id=13]
audio_stream = ExtResource( 5 )

[node name="BulletDebug" type="KinematicBody"]
collision_layer = 8
collision_mask = 23
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
cast_shadow = 0
mesh = SubResource( 1 )
skeleton = NodePath("")
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 3 )

[node name="Particles" type="Particles" parent="."]
material_override = SubResource( 4 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 10 )

[node name="AudioPlayerImpactWood" type="AudioStreamPlayer3D" parent="."]
stream = SubResource( 11 )
unit_size = 8.0
max_db = 6.0
bus = "SoundEffects"

[node name="AudioPlayerImpactMetal" type="AudioStreamPlayer3D" parent="."]
stream = SubResource( 12 )
unit_size = 8.0
max_db = 6.0
bus = "SoundEffects"

[node name="AudioPlayerImpactConcrete" type="AudioStreamPlayer3D" parent="."]
stream = SubResource( 13 )
unit_size = 8.0
max_db = 6.0
bus = "SoundEffects"
